--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Checkbox/UmbrellaCheckboxGroup.razor.scss
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Checkbox/UmbrellaCheckboxGroup.razor.scss
@@ -7,8 +7,10 @@
 
 .u-checkbox-group
 {
+	$self: &;
 	$margin: 8px 0;
 	$items-gap: 8px;
+	$inner-gap: 8px;
 
 	margin: var(--u-checkbox-group-margin, $margin);
 
@@ -26,5 +28,30 @@
 	{
 		margin: 0;
 		padding: 0;
+	}
+
+	&__checkbox-container
+	{
+		display: flex;
+		align-items: center;
+		gap: var(--u-checkbox-group-items-gap, $inner-gap);
+	}
+
+	&__collapse-toggle
+	{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		cursor: pointer;
+		border: none;
+		padding: 0;
+		background: none;
+
+		&-text
+		{
+			visibility: hidden;
+			width: 0;
+			height: 0;
+		}
 	}
 }
