--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Breadcrumb/UmbrellaBreadcrumbRenderer.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Breadcrumb/UmbrellaBreadcrumbRenderer.razor
@@ -1,24 +1,1 @@
-﻿<nav class="breadcrumb-nav" aria-label="breadcrumb">
-    <ol class="u-breadcrumb breadcrumb">
-        @if (BreadcrumbItemList.Count is 0)
-        {
-            <li class="u-breadcrumb-item breadcrumb-item active" aria-current="page">@Root</li>
-        }
-        else
-        {
-            <li class="u-breadcrumb-item breadcrumb-item"><a class="u-breadcrumb-item__link breadcrumb-item__link" href="@RootPath">@Root</a></li>
-        }
-
-        @foreach (var item in BreadcrumbItemList)
-        {
-            @if (item.IsActive)
-            {
-                <li class="u-breadcrumb-item breadcrumb-item active" aria-current="page">@item.Name</li>
-            }
-            else
-            {
-                <li class="u-breadcrumb-item breadcrumb-item"><a class="u-breadcrumb-item__link breadcrumb-item__link" href="@item.Url">@item.Name</a></li>
-            }
-        }
-    </ol>
-</nav>
+﻿<SectionOutlet SectionName="@UmbrellaBreadcrumb.SectionOutletSectionName" />
