--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/_Imports.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/_Imports.razor
@@ -1,5 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Sections
 @using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components
 @using Umbrella.AspNetCore.Blazor.Enumerations
 @using Umbrella.AspNetCore.Blazor.Components.Form
 @using Umbrella.AspNetCore.Blazor.Components.StateViews
